made enhancements to index.less to resolve overflow, add additional comments, adjust margin on contact - Complete - Zack Hitchcock

--- a/less/index.less
+++ b/less/index.less
@@ -159,10 +159,10 @@ header {
                         font-size: 2rem;
                         border-bottom: 1px solid gray;
                     }
-                }
-            }
-        }
-    }
+                } // end a 
+            } // end li
+        } // end ul
+    } // end nav
 
     .logo {
         align-self: flex-end;
@@ -173,8 +173,8 @@ header {
             max-width: 100%;
             margin: 20px 0;
         }
-    }
-}
+    } //end .logo
+} // end header
 
 // Call To Action (CTA) Styles
 
@@ -210,6 +210,10 @@ header {
             margin: 0;
         }
 
+        @media (max-width: 400px) {
+            font-size: 65px;
+        }
+
         button {
             border: 1px double black;
             font-size: 16px;
@@ -224,9 +228,9 @@ header {
                 background: @new-color;
                 color: white;
             }
-        }
-    }
-}
+        } // end button
+    } // end .cta-text
+} // end .cta
 
 // Main Content Styles 
 
@@ -275,8 +279,8 @@ header {
             align-content: space-between;
             height: 440px;
         }
-   }
-}
+   } // end .bottom-content
+} // end .main-content
 
 // Contact Styles 
 
@@ -290,7 +294,7 @@ header {
     }
 
     @media (max-width: 400px) {
-        margin: 20px;
+        margin: 10px;
     }
 }
 
